# seed-style-quickstart-basic

./: Cargo.toml  README.md  index.html
src/: app_theme.rs  global_styles.rs  lib.rs  theme.rs
