[package]
name = "seed_styling_quickstart"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.62"
seed = "0.7.0"
seed_hooks = "0.1.3"
seed_style = { package = "seed_style_preview", version = "0.1.0" }
rand = "0.7.3"
# For serialization, eg sending requests to a server. Otherwise, not required.

[dev-dependencies]
wasm-bindgen-test = "0.3.12" 

[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
