[package]
name = "seed-style-quickstart-basic"
version = "0.1.2"
edition = "2018"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.62"
seed = "0.7.0"
seed_hooks = "0.1.3"
seed_style = { package = "seed_style_preview", version = "0.1.7" }
# seed_style = {package = "seed_style_preview",  path = "../seed_style"}
rand = "0.7.3"


[dev-dependencies]
wasm-bindgen-test = "0.3.12" 

[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
